--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,3 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -26,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,   
+article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -65,18 +63,11 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-/* Your code starts here! */
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 .container {
-    max-width: 800px;
 	margin: 0 auto;
-	width: 100%;
-}
-
-@media (max-width: 800px){
-    .container {
-        background: lightgray;
-    }
+	width: 876px;
 }
 
 .nav {
@@ -97,42 +88,37 @@ h1, h2, h3, h4, h5 {
 	padding-top: 10px;
 }
 
-.logo-section {
-	display: inline-block;
-	vertical-align: top;
-}
-
-.logo {
-	display: inline;
-}
 
 .header {
 	border-bottom: 1px solid black;
-	margin: 30px 0;
+	margin: 40px 0;
 	padding: 30px 0 70px 0;
 }
 
 .main-header {
-	font-size: 80px;
+	font-size: 100px;
 	text-align: center;
 	margin-bottom: 20px;
 }
 
 .header-left {
-	width: 50%;
-	display: inline-block;
-	padding: 0 70px;
-	margin-right: 30px;
-	margin-top: 40px;
-	vertical-align: top;
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
 }
 
-.header-button {
-	text-align: center;
+.logo {
+	display: inline;
+	align-self: center;
+}
+
+.code-logo {
+	display: inline;
+	flex-direction: column-reverse;
 }
 
 .btn-get-started {
-	width: 180px;
+	width: 150px;
 	padding: 5px 0;
 	border: 1px solid black;
 	font-family: "Titillium Web", sans-serif;
@@ -144,49 +130,46 @@ h1, h2, h3, h4, h5 {
 
 }
 
-.img-header {
-	display: inline-block;
+.top-final {
+	display: flex;
 }
 
-@media (max-width: 800px){
-    .img-header {
-        display: none;
-        background: lightskyblue;
-    }
-}
-
-.top-section-item.left {
-	display: inline-block;
+.top-section-item-left {
 	width: 50%;
 	margin-bottom: 40px;
 	margin-right: 4px;
 }
 
-.top-section-item.right {
-	display: inline-block;
-	width: 49%;
+.top-section-item-right {
+	width: 50%;
 	margin-bottom: 40px;
+	
 }
 
 .middle-img {
 	margin-bottom: 40px;
 }
 
-.bottom-section-item {
-	width: 32%;
-	display: inline-block;
+.bottom-section-first-item {
+	width: 80%;
 	margin-bottom: 45px;
-	margin-left: 10px;
+	
 }
 
-@media (max-width: 800px){
-    .bottom-section-item {
-        flex-direction: column;
-    }
+.bottom-section-second-item {
+	width: 80%;
+	margin-bottom: 45px;
+	margin-right: 4px;
 }
 
-.bottom-section-item.first-item {
-	margin: 0;
+.bottom-section-third-item {
+	width: 80%;
+	margin-bottom: 45px;
+	margin-right: 4px;
+}
+
+.bottom-final {
+	display: flex;
 }
 
 .contact-section {
@@ -204,4 +187,173 @@ h1, h2, h3, h4, h5 {
 	text-align: center;
 }
 
+/* CSS code for services.html below */
 
+.services-container {
+	margin: 0 auto;
+	max-width: 876px;
+	width: 100%;
+}
+
+.services-navigation {
+	margin: 0 auto;
+	width: 876px;
+}
+
+.services-nav {
+	display: flex;
+	justify-content: space-between;
+	margin: 20px 0;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.services-navlink {
+	margin-right: 60px;
+	text-decoration: none;
+	color: gray;
+}
+
+.nav-link:hover {
+	border-bottom: 1px solid #666666;
+	color: #666666;
+	text-decoration: none;
+}
+
+.links {
+	display: flex;
+	height: 100%;
+	padding-top: 10px;
+}
+
+.logo-section {
+	display: flex;
+	justify-content: flex-end;
+	vertical-align: top;
+}
+
+.logo {
+	align-self: center;
+	padding: 5px;
+	margin-bottom: -20px;
+	margin-top: -30px;
+}
+
+.main-top-content h2 {
+	font-size: 25px;
+	margin-top: 20px;
+}
+
+.main-top-content {
+	width: 100%;
+	margin-bottom: 40px;
+	margin-right: 4px;
+}
+
+.top-middle-content {
+	display: flex;
+	width: 100%;
+	margin-bottom: 40px;
+	margin-right: 4px;
+}
+
+.individual-card {
+	width: 100%;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	margin-left: 4px;
+	margin-right: 4px;
+	border: 1.5px solid black;
+	background-color: whitesmoke;
+	box-sizing: border-box;
+	padding: 20px;
+}
+
+.middle-middle-content {
+	display: flex;
+	width: 100%;
+	margin-bottom: 40px;
+	margin-right: 4px;
+}
+
+.bottom-middle-content {
+	display: flex;
+	width: 100%;
+	margin-bottom: 40px;
+	margin-right: 4px;
+}
+
+.bottom-final {
+	display: flex;
+}
+
+.footer {
+	display: flex;
+}
+
+.top-middle-lm {
+	width: 180px;
+	padding: 5px 0;
+	border: 1px solid black;
+	font-family: "Titillium Web", sans-serif;
+	font-size: 18px;
+	font-weight: lighter;
+	cursor: pointer;
+	background-color: white;
+	color: black;
+	text-align: center;
+	margin-top: 1.5rem;
+}
+
+.middle-middle-lm {
+	width: 180px;
+	padding: 5px 0;
+	border: 1px solid black;
+	font-family: "Titillium Web", sans-serif;
+	font-size: 18px;
+	font-weight: lighter;
+	cursor: pointer;
+	background-color: white;
+	color: black;
+	text-align: center;
+	margin-top: 1.5rem;
+}
+
+.bottom-middle-lm {
+	width: 180px;
+	padding: 5px 0;
+	border: 1px solid black;
+	font-family: "Titillium Web", sans-serif;
+	font-size: 18px;
+	font-weight: lighter;
+	cursor: pointer;
+	background-color: white;
+	color: black;
+	text-align: center;
+	margin-top: 1.5rem;
+}
+
+.services-footer {
+	text-align: center;
+	margin-top: 20px;
+	padding: 2rem;
+}
+
+.services-list {
+	display: flex;
+	list-style: circle;
+	width: 100%;
+	margin-top: 20px;
+}
+
+.services-bottom-logo {
+	display: flex;
+	width: 100%;
+	margin-right: 100px;
+}
+
+.bottom-final {
+	display: flex;
+	width: 50%;
+	margin-right: 100px;
+}
