--- a/css/index.css
+++ b/css/index.css
@@ -150,26 +150,25 @@ h1, h2, h3, h4, h5 {
 	margin-bottom: 40px;
 }
 
+.bottom-final {
+	display: flex;
+	text-align: left;
+}
+
 .bottom-section-first-item {
-	margin: 0;
-	margin-bottom: 30px;
-	margin-right: 20px;
+	
+	margin-bottom: 20px;
+	margin-right: 4px;
 }
 
 .bottom-section-second-item {
-	margin: 0;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	margin-left: 20px;
 }
 
 .bottom-section-third-item {
-	margin: 0;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	margin-left: 20px;
-}
-
-.bottom-final {
-	display: flex;
 }
 
 .contact-section {
