--- a/css/index.css
+++ b/css/index.css
@@ -65,9 +65,17 @@ h1, h2, h3, h4, h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
+/* TABLET mode */
+
 .container {
+	max-width: 800px;
 	margin: 0 auto;
-	width: 876px;
+}
+
+@media (max-width: 800px){
+	.container {
+		display: flex;	
+	}
 }
 
 .nav {
