--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ h1, h2, h3, h4, h5 {
 	padding: 30px 0 70px 0;
 }
 
-@media (max-width: 515px){
+@media screen and (max-width: 515px){
 	.header {
 		display: flex;
 		text-align: center;
@@ -121,7 +121,7 @@ h1, h2, h3, h4, h5 {
 	align-self: center;
 }
 
-@media (max-width: 800px){
+@media screen and (max-width: 800px){
 	.logo {
 		flex-direction: column-reverse;
 	}
@@ -132,7 +132,7 @@ h1, h2, h3, h4, h5 {
 	flex-direction: column-reverse;
 }
 
-@media (max-width: 600px){
+@media screen and (max-width: 600px){
 	.code-logo {
 		display: none;	
 	}
