--- a/css/index.css
+++ b/css/index.css
@@ -73,6 +73,29 @@ h1, h2, h3, h4, h5 {
 	margin: 0 auto;
 }
 
+@media screen and (max-width: 800px){
+	.container {
+		width: 100%;
+	}
+	.nav {
+		width: 70%;
+	}
+	.logo {
+		width: 30%;
+		flex-direction: column-reverse;
+	}
+	.header {
+		display: flex;
+		text-align: center;
+	}
+	.main-header {
+		flex-direction: column;
+	}
+	.code-logo {
+		display: none;	
+	}
+}
+
 .nav {
 	margin: 20px 0;
 	text-align: center;
@@ -97,24 +120,10 @@ h1, h2, h3, h4, h5 {
 	padding: 30px 0 70px 0;
 }
 
-@media screen and (max-width: 515px){
-	.header {
-		display: flex;
-		text-align: center;
-	}
-}
-
 .main-header {
 	font-size: 100px;
 	text-align: center;
 	margin-bottom: 20px;
-}
-
-@media screen and (max-width: 600px){
-	.main-header {
-		display: flex;
-		flex-direction: column;
-	}
 }
 
 .header-left {
@@ -128,22 +137,9 @@ h1, h2, h3, h4, h5 {
 	align-self: center;
 }
 
-@media screen and (max-width: 800px){
-	.logo {
-		flex-direction: column-reverse;
-		justify-content: center;
-	}
-}
-
 .code-logo {
 	display: inline;
 	flex-direction: column-reverse;
-}
-
-@media screen and (max-width: 600px){
-	.code-logo {
-		display: none;	
-	}
 }
 
 .btn-get-started {
