--- a/css/index.css
+++ b/css/index.css
@@ -68,21 +68,26 @@ h1, h2, h3, h4, h5 {
 /* TABLET mode */
 
 .container {
-	max-width: 700px;
+	max-width: 800px;
 	width: 100%;
 	margin: 0 auto;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 800px){
 	.container {
 		width: 100%;
 	}
 	.nav {
-		width: 30%;
+		width: 100%;
+		display: flex;
+		flex-direction: column-reverse;
+	}
+	.links {
+		width: 100%;
+		/* flex-direction: column-reverse; */
 	}
 	.logo {
-		width: 30%;
-		flex-direction: column-reverse;
+		width: 100%;
 	}
 	.header {
 		display: flex;
@@ -92,11 +97,12 @@ h1, h2, h3, h4, h5 {
 		flex-direction: column;
 	}
 	.img-header {
-		width: 30%;
+		width: 100%;
 		display: none;	
 	}
 	.btn-get-started {
 		justify-content: center;
+		flex-direction: column;
 	}
 }
 
